--- a/src/Makefile
+++ b/src/Makefile
@@ -194,6 +194,18 @@ ifneq ($(strip $(PREV_FINAL_LDFLAGS)), $(strip $(FINAL_LDFLAGS)))
 .make-prerequisites: persist-settings
 endif
 
+# ---- Embedded Redis stuff ----
+EMBEDDED_REDIS_NAME=liberedis.so
+EMBEDDED_REDIS_OBJ=$(filter-out server.o,$(REDIS_SERVER_OBJ)) server-embedded.o eredis.o
+
+server-embedded.o: server.c
+	$(REDIS_CC) -c $(FINAL_CFLAGS) -DREDIS_EMBEDDED $^ -o $@
+
+$(EMBEDDED_REDIS_NAME): $(EMBEDDED_REDIS_OBJ)
+	$(REDIS_LD) -shared -o $@ $^ ../deps/hiredis/libhiredis.a ../deps/lua/src/liblua.a $(FINAL_LIBS)
+
+# ---- End ---
+
 # redis-server
 $(REDIS_SERVER_NAME): $(REDIS_SERVER_OBJ)
 	$(REDIS_LD) -o $@ $^ ../deps/hiredis/libhiredis.a ../deps/lua/src/liblua.a $(FINAL_LIBS)
@@ -275,6 +287,9 @@ noopt:
 
 valgrind:
 	$(MAKE) OPTIMIZATION="-O0" MALLOC="libc"
+
+embedded:
+	$(MAKE) MALLOC="libc" CFLAGS="-fPIC -fpic" $(EMBEDDED_REDIS_NAME)
 
 helgrind:
 	$(MAKE) OPTIMIZATION="-O0" MALLOC="libc" CFLAGS="-D__ATOMIC_VAR_FORCE_SYNC_MACROS"
